--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,25 @@
   margin: 0;
 }
 
+/*************** Elements **************/
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  height: 2.5rem;
+}
+
+/*************** Classes ***************/
+
 .header {
   width: 100%;
   line-height: 100px;
   display: flex;
-  justify-content: start;
   align-items: center;
   padding-left: 50px;
-  color: #ffffff;
+  color: white;
   background-color: #f5ba13 !important;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.5);
 }
