material-button update

--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,33 @@ textarea {
   padding: 15px 10px 5px 10px;
   margin: 20px auto;
 }
+
+.MuiButton-root {
+  width: 30px;
+  height: 55px;
+  position: absolute;
+  bottom: -28px;
+  left: 400px;
+  cursor: pointer;
+  background-color: #fff !important;
+  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  border-radius: 50% !important;
+}
+
+.MuiButton-root .plus_sign {
+  font-size: 45px !important;
+  font-weight: 900;
+  color: #f4b400;
+  cursor: pointer;
+  z-index: 222;
+  background: transparent;
+}
+
+.MuiButton-root:hover {
+  background: #f4b400 !important;
+}
+
+.MuiButton-root:hover .plus_sign {
+  color: #fff;
+  background: transparent;
+}
