--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -60,12 +63,15 @@ textarea {
   color: #fff;
   background-color: #f5ba13 !important;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
+  font-family: 'Dancing Script', cursive;
+  font-size: 1.5rem;
 }
 
 .main_note {
   width: 500px;
   padding: 15px 10px 5px 10px;
   margin: 20px auto;
+  font-family: 'Raleway', sans-serif;
 }
 
 .MuiButton-root {
@@ -111,6 +117,7 @@ textarea {
 .note h1 {
   font-size: 1.1em;
   margin-bottom: 6px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .note p {
@@ -118,6 +125,7 @@ textarea {
   margin-bottom: 10px;
   white-space: pre-wrap;
   word-wrap: break-word;
+  font-family: 'Raleway', sans-serif;
 }
 
 .note .btn {
