developer name added

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/*
+  Develped by - Shwetang
+  GitHub profile - https://github.com/Shwetang550  
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Raleway:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
